Add instructions and shrink flags

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.card {
+  width: 8rem;
+}
+
+.flag-image {
+  width: 100%;
+  height: auto;
+}
