--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+
+:root {
+  --section-padding: 1rem;
+  --section-margin: 1rem;
+  --border-radius-default: 0.75rem;
+  --primary-color: #82b4ff;
+  --primary-color-dark: #46618a;
+  --shade-color: #494949da;
+  --color-shadow: grey;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "IBM Plex Mono", monospace;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+}
+
+button {
+  background-color: var(--primary-color);
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: var(--border-radius-default);
+  /* border-radius: 32px; */
+  padding: var(--section-padding) calc(var(--section-padding) * 2);
+  text-decoration: none;
+  font-size: 1.5rem;
+  transition-duration: 0.2s;
+}
+
+button:not(:disabled),
+input:not(:disabled),
+input:not(:disabled) + label,
+a {
+  cursor: pointer;
+}
+
+.clickable:hover {
+  cursor: pointer;
+}
+
+button:not(:disabled):hover {
+  background-color: var(--primary-color-dark);
+}
+
+.box-shadow {
+  box-shadow: 2px 5px 5px var(--color-shadow);
+}
+
+.icon {
+  vertical-align: bottom;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--section-padding);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,11 +85,84 @@ code {
     monospace;
 }
 
+#score-board {
+  display: flex;
+}
+
+/* .card-grid {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, minmax(150px, 1fr));
+  gap: 1rem;
+  width: 100%;
+  max-width: 90vw;
+  justify-items: center;
+  justify-content: center;
+} */
+
+.card-grid {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-auto-columns: 1fr; /* default width */
+  gap: 1rem;
+  width: 100%;
+  justify-items: center;
+}
+
+@media screen and (min-width: 600px) {
+  .card-grid {
+    grid-auto-columns: calc(90vw / 3); /* 3 columns */
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .card-grid {
+    grid-auto-columns: calc(90vw / 4); /* 4 columns */
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-grid {
+    max-width: 60vw;
+    grid-auto-columns: calc(90vw / 5); /* 5 columns */
+  }
+}
+
 .card {
-  width: 8rem;
+  /* width: 100%; */
+  width: clamp(8rem, 100%, 300px);
+  /* border: solid 1px black; */
 }
 
 .flag-image {
   width: 100%;
   height: auto;
+}
+
+figure {
+  position: relative;
+}
+
+figcaption {
+  position: absolute;
+  /* display: none; */
+  /* bottom: -50px; initially position below the figure */
+  top: 0.25rem;
+  left: 1px;
+  background: rgba(0, 0, 0, 0.603);
+  color: white;
+  padding: 2px;
+  transition: transform 0.3s ease-in-out;
+  /* transform: translateY(100%); */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
+}
+
+figure:hover figcaption {
+  /* display: block; */
+  /* transform: translateY(0); */
+  opacity: 1;
+  visibility: visible;
 }
